[package]
name = "hackathon-jpeg-steganography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
binary_rw = "3.0.0"
bitstream-io = "1.5.0"
clap = { version = "3.2.8", features = ["cargo"] }
# jpeg-decoder = { path = "jpeg-decoder" }
num-bigint = "0.4.3"
num-traits = "0.2.15"
